# iras-new

./: .gitignore  README.md  clean_data.py  console.py  console.spec  dataset_parser.py  main.py  player.py  pyproject.toml  railtest.py  speaker.py  stations.json  templates.py  vox.py
dataset/station/: nsg_data.json
espeak_ng/: __init__.py  espeak.py
etrainlib/: __init__.py  _async.py  _sync.py  constants.py  parser.py
