[tool.poetry]
name = "new-discord-voicereceive"
version = "0.1.0"
description = ""
authors = ["sairam4123 <kannanscoffee@outlook.com>"]
license = "AGPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8,<3.14"
gTTS = "^2.2.4"
python-dateutil = "^2.8.2"
parsedatetime = "^2.6"
pydub = "^0.25.1"
py-cord = {extras = ["voice"], version = "^2.2.2"}
pocketsphinx = "^5.0.0"
vosk = "^0.3.44"
pyAudio = "^0.2.12"
wavelink = "^1.3.3"
SpeechRecognition = "^3.10.0"
py-trans = "^0.6.1"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
